--- a/static/index.html
+++ b/static/index.html
@@ -3,533 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Index</title>
+    <title>Croco</title>
     <link rel="stylesheet" href="/css/image_croc.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/blocks/menu/menu.css">
+    <link rel="stylesheet" href="/blocks/form/form.css">
 </head>
 <body bgcolor="#f1f1f1">
 <div class="background">
 
-    <!-- -----------------------Index---------------------------- -->
+    <div id="js-index">
 
-    <div class="page page_type_left" id="js-index-leftpage">
-        <div class="user-area" id="js-index-userareaLogout">
-            Добро пожаловать!
-            <a id="js-index-login">Авторизуйтесь</a>
-            или
-            <a id="js-index-signup">зарегистрируйтесь</a>,
-            чтобы начать играть!
-        </div>
-        <div class="user-area" id="js-index-userareaLogin">
-            Привет,
-            <span id="js-index-nickname">test</span>!<br>Рейтинг:
-            <span id="js-index-rating">1996</span>
-            <br>
-            <a id="js-index-logout">Выйти</a>
-        </div>
-        <div class="croco-image" id="main">
-            <div class="croco-image__back">
-                <div class="croco-image__spike croco-image__spike_number_1">
-                </div>
-                <div class="croco-image__spike croco-image__spike_number_2">
-                </div>
-                <div class="croco-image__spike croco-image__spike_number_3">
-                </div>
-                <div class="croco-image__spike croco-image__spike_number_4">
-                </div>
-                <div class="croco-image__spike croco-image__spike_number_5">
-                </div>
-                <div class="croco-image__spike croco-image__spike_number_6">
-                </div>
-                <div class="croco-image__spike croco-image__spike_number_7">
-                </div>
-                <div class="croco-image__spike croco-image__spike_number_8">
-                </div>
-            </div>
-            <div class="croco-image__rotate-arm">
-                <div class="croco-image__brush">
-                </div>
-                <div class="croco-image__drop">
-                </div>
-                <div class="croco-image__arm croco-image__arm_type_left">
-                </div>
-            </div>
-            <div class="croco-image__base">
-            </div>
-            <div class="croco-image__bottom">
-            </div>
-            <div class="croco-image__top">
-            </div>
-            <div class="croco-image__eye">
-                <div class="croco-image__iris">
-                    <div class="croco-image__dot">
-                    </div>
-                </div>
-            </div>
-            <div class="croco-image__tail" id="tail">
-            </div>
-            <div class="croco-image__leg croco-image__leg_type_right">
-            </div>
-            <div class="croco-image__leg croco-image__leg_type_left">
-            </div>
-            <div class="croco-image__circle">
-            </div>
-            <div class="croco-image__arm croco-image__arm_type_right">
-            </div>
-        </div>
-    </div>
-    <div class="page page_type_right" id="js-index-rightpage">
-        <h1 class="page__title_main">Крокодил</h1>
-        <div class="menu">
-            <a class="button button_size_big menu__button menu__button_play" id="js-index-game">
-                Играть!
-            </a>
-            <a class="button button_size_big menu__button" id="js-index-leaderboard">
-                Рейтинг
-            </a>
-            <a class="button button_size_big menu__button" id="js-index-about">
-                Об игре
-            </a>
-        </div>
     </div>
 
-    <!-- -----------------------Signup---------------------------- -->
+    <div id="js-signup">
 
-    <div class="page page_type_single" id="js-signup-singlepage">
-        <a class="button button_size_mini button_type_back">&#8630;</a>
-        <div class="page__title">
-            Регистрация
-        </div>
-        <form class="form" action="/signup">
-            <p class="form__field">
-                <span class=form__label>Введите Email:</span>
-                <input class="form__input form__input_valid" type="text" id="js-signup-email"
-                       placeholder="ant-semenov@mail.ru">
-            </p>
-            <p class="form__field">
-                <span class="form__label">Введите Nickname:</span>
-                <input class="form__input form__input_valid" type="text" id="js-signup-nickname"
-                       placeholder="super_pizza">
-            </p>
-            <p class="form__field">
-                <span class="form__label">Введите пароль:</span>
-                <input class="form__input form__input_valid" type="password" id="js-signup-password">
-            </p>
-            <p class="from__field">
-                <span class="form__label">Повторите пароль:</span>
-                <input class="form__input form__input_valid" type="password" id="js-signup-passwordrep">
-            </p>
-            <input class="button button_size_big button_type_submit" id="js-signup-submit" type="submit"
-                   value="Зарегистрироваться!">
-        </form>
     </div>
 
-    <!-- -----------------------Login---------------------------- -->
+    <div id="js-login">
 
-    <div class="page page_type_single" id="js-login-singlepage">
-        <a class="button button_size_mini button_type_back">&#8630;</a>
-        <div class="page__title">
-            Авторизация
-        </div>
-        <div class="some-picture">
-            Это картинка будет
-        </div>
-        <form class="form" action="#">
-            <p class="form__field">
-                <span class="form__label">Nickname:</span>
-                <input class="form__input form__input_valid" type="text" id="js-login-nickname">
-            </p>
-            <p class="form__field">
-                <span class="form__label">Пароль:</span>
-                <input class="form__input form__input_valid" type="password" id="js-login-password">
-            </p>
-            <input class="button button_size_big button_type_submit" id="js-login-submit" type="submit" value="Войти!">
-        </form>
     </div>
 
-    <!-- -----------------------Leaderboard---------------------------- -->
+    <div id="js-leaderboard">
 
-    <div class="page page_type_left" id="js-leaderboard-leftpage">
-        <a class="button button_size_mini button_type_back">&#8630;</a>
-        <div class="page__title">
-            Отгадывали:
-        </div>
-        <table class="score-table">
-            <tr>
-                <th>
-                    #
-                </th>
-                <th>
-                    nickname
-                </th>
-                <th>
-                    score
-                </th>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_gold">
-                        1
-                    </div>
-                </td>
-                <td>
-                    Kate
-                </td>
-                <td>
-                    1000
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_silver">
-                        2
-                    </div>
-                </td>
-                <td>
-                    Anton
-                </td>
-                <td>
-                    999
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_bronze">
-                        3
-                    </div>
-                </td>
-                <td>
-                    Slavas
-                </td>
-                <td>
-                    2
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_other">
-                        4
-                    </div>
-                </td>
-                <td>
-                    0
-                </td>
-                <td>
-                    0
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_other">
-                        5
-                    </div>
-                </td>
-                <td>
-                    0
-                </td>
-                <td>
-                    0
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_other">
-                        6
-                    </div>
-                </td>
-                <td>
-                    0
-                </td>
-                <td>
-                    0
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_other">
-                        7
-                    </div>
-                </td>
-                <td>
-                    0
-                </td>
-                <td>
-                    0
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_other">
-                        8
-                    </div>
-                </td>
-                <td>
-                    0
-                </td>
-                <td>
-                    0
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_other">
-                        ...
-                    </div>
-                </td>
-                <td>
-                    ...
-                </td>
-                <td>
-                    ...
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_other">
-                        9
-                    </div>
-                </td>
-                <td>
-                    0
-                </td>
-                <td>
-                    0
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_other">
-                        1996
-                    </div>
-                </td>
-                <td>
-                    Ты
-                </td>
-                <td>
-                    0
-                </td>
-            </tr>
-        </table>
-    </div>
-    <div class="page page_type_right" id="js-leaderboard-rightpage">
-        <div class="page__title">
-            Рисовали:
-        </div>
-        <table class="score-table">
-            <tr>
-                <th>
-                    #
-                </th>
-                <th>
-                    nickname
-                </th>
-                <th>
-                    score
-                </th>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_gold">
-                        1
-                    </div>
-                </td>
-                <td>
-                    Kate
-                </td>
-                <td>
-                    1000
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_silver">
-                        2
-                    </div>
-                </td>
-                <td>
-                    Anton
-                </td>
-                <td>
-                    999
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_bronze">
-                        3
-                    </div>
-                </td>
-                <td>
-                    Slavas
-                </td>
-                <td>
-                    2
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_other">
-                        4
-                    </div>
-                </td>
-                <td>
-                    0
-                </td>
-                <td>
-                    0
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_other">
-                        5
-                    </div>
-                </td>
-                <td>
-                    0
-                </td>
-                <td>
-                    0
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_other">
-                        6
-                    </div>
-                </td>
-                <td>
-                    0
-                </td>
-                <td>
-                    0
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_other">
-                        7
-                    </div>
-                </td>
-                <td>
-                    0
-                </td>
-                <td>
-                    0
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_other">
-                        8
-                    </div>
-                </td>
-                <td>
-                    0
-                </td>
-                <td>
-                    0
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_other">
-                        9
-                    </div>
-                </td>
-                <td>
-                    0
-                </td>
-                <td>
-                    0
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_other">
-                        ...
-                    </div>
-                </td>
-                <td>
-                    ...
-                </td>
-                <td>
-                    ...
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="medal medal_type_other">
-                        1996
-                    </div>
-                </td>
-                <td>
-                    Ты
-                </td>
-                <td>
-                    0
-                </td>
-            </tr>
-        </table>
     </div>
 
-    <!-- -----------------------About---------------------------- -->
+    <div id="js-about">
 
-    <div class="page page_type_left" id="js-about-leftpage">
-        <a class="button button_size_mini button_type_back">&#8630;</a>
-        <div class="page__title">Крокодил</div>
-        <p class="page__paragraph">
-            Смысл игры состоит в том, чтобы отгадать загаданное слово. Один игрок рисует слово на страничке, остальные
-            угадывают ответ в чате.
-        </p>
-        <div class="some-picture">
-            Это картинка будет
-        </div>
-    </div>
-    <div class="page page_type_right" id="js-about-rightpage">
-        <div class="page__title">
-            Список людей:
-        </div>
-        <div class="page__subtitle">
-            Человек1
-        </div>
-        <p class="page__paragraph">
-            Some text some text some text some text some text
-        </p>
-        <div class="page__subtitle">
-            Человек2
-        </div>
-        <p class="page__paragraph">
-            Some text some text some text some text some text
-        </p>
-        <div class="page__subtitle">
-            ...
-        </div>
-        <p class="page__paragraph">
-            Some text some text some text some text some text
-        </p>
     </div>
 
-    <!-- -----------------------Game---------------------------- -->
+    <div id="js-game">
 
-    <div class="page page_type_single page_type_game" id="js-game-singlepage">
-        <canvas id="canvas">
-        </canvas>
-        <div class="palette">
-            <a class="button button_size_mini palette__color"></a>
-            <a class="button button_size_mini palette__color"></a>
-            <a class="button button_size_mini palette__color"></a>
-            <a class="button button_size_mini palette__color"></a>
-            <a class="button button_size_mini palette__color"></a>
-            <a class="button button_size_mini palette__color"></a>
-            <a class="button button_size_mini palette__color"></a>
-        </div>
     </div>
 </div>
-<script src="/scripts/image_croc.js"></script>
-<script src="/scripts/main.js"></script>
-<script src="/scripts/form_validation.js"></script>
-<script src="/scripts/painting.js"></script>
-<script src="/scripts/palette.js"></script>
 </body>
+<script src="/blocks/button/button.js"></script>
+<script src="/blocks/form/form.js"></script>
+<script src="/blocks/page/page.js"></script>
+<script src="/blocks/user_area/user_area.pug.js"></script>
+<script src="/blocks/user_area/user_area.js"></script>
+<script src="/blocks/menu/menu.js"></script>
+<script src="/blocks/text_paragraph/text_paragraph.js"></script>
+<script src="/blocks/score_table/score_table.pug.js"></script>
+<script src="/blocks/score_table/score_table.js"></script>
+<script src="/main.js"></script>
 </html>
