added blocks, templates

--- a/static/index.html
+++ b/static/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Croco</title>
-    <link rel="stylesheet" href="/css/image_croc.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" href="/blocks/score_table/score_table.css">
+    <link rel="stylesheet" href="/blocks/image_croc/image_croc.css">
+    <link rel="stylesheet" href="/blocks/text_paragraph/text_paragraph.css">
+    <link rel="stylesheet" href="/blocks/page/page.css">
+    <link rel="stylesheet" href="/blocks/user_area/user_area.css">
+    <link rel="stylesheet" href="/blocks/button/button.css">
     <link rel="stylesheet" href="/blocks/menu/menu.css">
     <link rel="stylesheet" href="/blocks/form/form.css">
 </head>
@@ -38,6 +43,7 @@
 </div>
 </body>
 <script src="/blocks/button/button.js"></script>
+<script src="/blocks/form/form.pug.js"></script>
 <script src="/blocks/form/form.js"></script>
 <script src="/blocks/page/page.js"></script>
 <script src="/blocks/user_area/user_area.pug.js"></script>
@@ -46,5 +52,8 @@
 <script src="/blocks/text_paragraph/text_paragraph.js"></script>
 <script src="/blocks/score_table/score_table.pug.js"></script>
 <script src="/blocks/score_table/score_table.js"></script>
+<script src="/blocks/image_croc/image_croc.pug.js"></script>
+<script src="/blocks/image_croc/image_croc.js"></script>
 <script src="/main.js"></script>
+<script src="/scripts/form_validation.js"></script>
 </html>
