--- a/static/index.html
+++ b/static/index.html
@@ -42,6 +42,7 @@
     </div>
 </div>
 </body>
+<script src="/modules/http.js"></script>
 <script src="/blocks/button/button.js"></script>
 <script src="/blocks/form/form.pug.js"></script>
 <script src="/blocks/form/form.js"></script>
