added canvas block, tests, fixed errors

--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/blocks/button/button.css">
     <link rel="stylesheet" href="/blocks/menu/menu.css">
     <link rel="stylesheet" href="/blocks/form/form.css">
+    <link rel="stylesheet" href="/blocks/canvas/canvas.css">
 </head>
 <body bgcolor="#f1f1f1">
 <div class="background">
@@ -55,5 +56,6 @@
 <script src="/blocks/score_table/score_table.js"></script>
 <script src="/blocks/image_croc/image_croc.pug.js"></script>
 <script src="/blocks/image_croc/image_croc.js"></script>
+<script src="/blocks/canvas/canvas.js"></script>
 <script src="/main.js"></script>
 </html>
