--- a/static/index.html
+++ b/static/index.html
@@ -5,15 +5,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Croco</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link rel="stylesheet" href="/blocks/score_table/score_table.css">
-    <link rel="stylesheet" href="/blocks/image_croc/image_croc.css">
-    <link rel="stylesheet" href="/blocks/text_paragraph/text_paragraph.css">
-    <link rel="stylesheet" href="/blocks/page/page.css">
-    <link rel="stylesheet" href="/blocks/user_area/user_area.css">
-    <link rel="stylesheet" href="/blocks/button/button.css">
-    <link rel="stylesheet" href="/blocks/menu/menu.css">
-    <link rel="stylesheet" href="/blocks/form/form.css">
-    <link rel="stylesheet" href="/blocks/canvas/canvas.css">
 </head>
 <body bgcolor="#f1f1f1">
 <div class="background">
@@ -43,19 +34,5 @@
     </div>
 </div>
 </body>
-<script src="/modules/http.js"></script>
-<script src="/blocks/button/button.js"></script>
-<script src="/blocks/form/form.pug.js"></script>
-<script src="/blocks/form/form.js"></script>
-<script src="/blocks/page/page.js"></script>
-<script src="/blocks/user_area/user_area.pug.js"></script>
-<script src="/blocks/user_area/user_area.js"></script>
-<script src="/blocks/menu/menu.js"></script>
-<script src="/blocks/text_paragraph/text_paragraph.js"></script>
-<script src="/blocks/score_table/score_table.pug.js"></script>
-<script src="/blocks/score_table/score_table.js"></script>
-<script src="/blocks/image_croc/image_croc.pug.js"></script>
-<script src="/blocks/image_croc/image_croc.js"></script>
-<script src="/blocks/canvas/canvas.js"></script>
-<script src="/main.js"></script>
+<script src="/build.js"></script>
 </html>
