added webpack build for tests

--- a/static/tests.html
+++ b/static/tests.html
@@ -11,16 +11,8 @@
     <script src="jasmine/jasmine-html.js"></script>
     <script src="jasmine/boot.js"></script>
 
-    <!-- include source files here... -->
-    <script src="modules/http.js"></script>
-
     <!-- include spec files here... -->
-    <script src="api-specs/commonSpecs.js"></script>
-    <script src="api-specs/registerSpecs.js"></script>
-    <script src="api-specs/loginSpecs.js"></script>
-    <script src="api-specs/logoutSpecs.js"></script>
-    <script src="api-specs/whoamiSpecs.js"></script>
-    <script src="api-specs/bestSpecs.js"></script>
+    <script src="build_test.js"></script>
 
 </head>
 <body>
