fixed game, added mobile version

--- a/static/index.html
+++ b/static/index.html
@@ -9,27 +9,27 @@
 <body bgcolor="#f1f1f1">
 <div class="background">
 
-    <div id="js-index">
+    <div id="js-index" hidden>
 
     </div>
 
-    <div id="js-signup">
+    <div id="js-signup" hidden>
 
     </div>
 
-    <div id="js-login">
+    <div id="js-login" hidden>
 
     </div>
 
-    <div id="js-leaderboard">
+    <div id="js-leaderboard" hidden>
 
     </div>
 
-    <div id="js-about">
+    <div id="js-about" hidden>
 
     </div>
 
-    <div id="js-game">
+    <div id="js-game" hidden>
 
     </div>
 </div>
