added manifest, fixed errors

--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Croco</title>
+    <link rel="icon" href="/imgs/favicon.ico"/>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel=manifest href="/manifest.json">
+
+    <link rel=apple-touch-icon href="/imgs/icon-192x192.png">
+    <meta name=theme-color content=#f1f1f1>
+
+    <meta name=application-name content="Croco">
+    <meta name=apple-mobile-web-app-title content="Croco">
+
+    <meta name=mobile-web-app-capable content=yes>
+    <meta name=apple-mobile-web-app-capable content=yes>
+    <meta name=apple-mobile-web-app-status-bar-style content=#f1f1f1>
 </head>
 <body bgcolor="#f1f1f1">
 <div class="background">
@@ -30,6 +42,9 @@
     </div>
 
     <div id="js-game" hidden>
+
+    </div>
+    <div id="js-offline" hidden>
 
     </div>
 </div>
