--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Croco</title>
     <link rel="icon" href="/imgs/favicon.ico"/>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel=manifest href="/manifest.json">
 
     <link rel=apple-touch-icon href="/imgs/icon-192x192.png">
@@ -21,19 +20,19 @@
 <body bgcolor="#f1f1f1">
 <div class="background">
 
-    <div id="js-index" hidden>
+    <div id="js-index" class="fix-height" hidden>
 
     </div>
 
-    <div id="js-signup" hidden>
+    <div id="js-signup" class="fix-height" hidden>
 
     </div>
 
-    <div id="js-login" hidden>
+    <div id="js-login" class="fix-height" hidden>
 
     </div>
 
-    <div id="js-leaderboard" hidden>
+    <div id="js-leaderboard" class="fix-height" hidden>
 
     </div>
 
@@ -41,10 +40,10 @@
 
     </div>
 
-    <div id="js-game" hidden>
+    <div id="js-game" class="fix-height" hidden>
 
     </div>
-    <div id="js-offline" hidden>
+    <div id="js-offline" class="fix-height" hidden>
 
     </div>
 </div>
