--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,7 @@
     <meta name=mobile-web-app-capable content=yes>
     <meta name=apple-mobile-web-app-capable content=yes>
     <meta name=apple-mobile-web-app-status-bar-style content=#f1f1f1>
+    <meta name=”viewport” content=”user-scalable=no” />
 </head>
 <body bgcolor="#f1f1f1">
 <div class="background">
