--- a/static/index.html
+++ b/static/index.html
@@ -49,5 +49,5 @@
     </div>
 </div>
 </body>
-<script src="/build_main.js"></script>
+<script src="/build_main.js?deploy-freeze"></script>
 </html>
